Start on RESTful api for projects

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -604,7 +604,7 @@ iframe {
 
 div.content {
     margin-left: 10%;
-    padding: 5% 16px;
+    padding: 2% 2%;
     height: 100%;
     background: #f2f2f2;
     overflow: hidden;
