Fixed an issue where the project status would show the wrong status after it was updated

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -598,7 +598,7 @@ img.logo {
 div.add-person {
     margin-left: 13%;
     margin-top: 0%;
-    position: fixed;
+    position: absolute;
     height: auto;
 }
 
